add controllers, modify error handling and swagger def
